[package]
name = "roslibrust_common"
version = "0.15.1"
edition = "2021"
authors = [ "carter <carterjschultz@gmail.com>" ]
license = "MIT"
description = "Common types and traits used throughout the roslibrust ecosystem."
repository = "https://github.com/roslibrust/roslibrust"
categories = ["science::robotics"]

[dependencies]
# Used for error handling
thiserror = "2.0"
anyhow = "1.0"
# Used as basis for serialization
serde = { workspace = true }
# Used for md5sum calculation
md5 = "0.7"
# Required for subscribers to implement into_stream
futures-core = "0.3"
# Used for implementation of into_stream for subscribers
async-stream = "0.3"
