[package]
name = "roslibrust_ros2"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh = "1.5"
tokio = { workspace = true }
env_logger = "0.11"
cdr = "0.2"
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"

# For now doing ros2 hash calculation in this crate,
# but it should be moved to roslibrust_codegen
roslibrust_codegen = { path = "../roslibrust_codegen", version = "0.15" }
